kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-docker-homework
  labels:
    monitoring: disabled
spec:
  selector:
    app: k8s-docker-homework
  ports:
    - port: 8000
      name: http
      targetPort: http
