kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-docker-homework
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - $(DEPLOYMENT_NAME)INGRESS_VHOST_SUFFIX
        - $(DEPLOYMENT_NAME).ru
    - secretName: $(DEPLOYMENT_NAME)-tls
  rules:
    - host: $(DEPLOYMENT_NAME)INGRESS_VHOST_SUFFIX
      http:
        paths:
          - path: /
            backend:
              service:
                name: k8s-docker-homework
                port:
                  number: 8000
            pathType: ImplementationSpecific
    - host: $(DEPLOYMENT_NAME).ru
      http:
        paths:
          - path: /
            backend:
              service:
                name: k8s-docker-homework
                port:
                  number: 8000
            pathType: ImplementationSpecific
